<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reservas.DetallesReservaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/pistaReservaDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pista_reserva"
            android:gravity="center"/>
        <TextView
            android:id="@+id/nombreReservaDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_reserva"
            android:gravity="center"
            android:layout_below="@+id/pistaReservaDetalles"/>
        <TextView
            android:id="@+id/apellReservaDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellido_reserva"
            android:gravity="center"
            android:layout_below="@+id/nombreReservaDetalles"/>
        <TextView
            android:id="@+id/DNIReservaDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dni"
            android:gravity="center"
            android:layout_below="@+id/apellReservaDetalles"/>
        <TextView
            android:id="@+id/TlfReservaDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono_reserva"
            android:gravity="center"
            android:layout_below="@+id/DNIReservaDetalles"/>
        <TextView
            android:id="@+id/EmailReservaDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_reserva"
            android:gravity="center"
            android:layout_below="@+id/TlfReservaDetalles"/>
        <TextView
            android:id="@+id/fecha_inicioDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_inicio"
            android:gravity="center"
            android:layout_below="@+id/EmailReservaDetalles"/>
        <TextView
            android:id="@+id/fecha_finDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_fin"
            android:gravity="center"
            android:layout_below="@+id/fecha_inicioDetalles"/>
        <TextView
            android:id="@+id/fechaDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_actual"
            android:gravity="center"
            android:layout_below="@+id/fecha_finDetalles"/>
        <TextView
            android:id="@+id/asistentesDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_de_asistentes"
            android:gravity="center"
            android:layout_below="@+id/fechaDetalles"/>
        <TextView
            android:id="@+id/comentarioDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comentario"
            android:gravity="center"
            android:layout_below="@+id/asistentesDetalles"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/comentarioDetalles">
            <Button
                android:id="@+id/botonEliminarReserva"
                android:layout_width="1dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/eliminar"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize">
            </Button>
            <Button
                android:id="@+id/botonActualizarReserva"
                android:layout_width="1dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/modificar"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize">
            </Button>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>