<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FormularioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textSala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textStyle="bold"
                android:text="@string/salaText" />

            <Spinner
                android:id="@+id/spSalas"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/salas"/>

            <TextView
                android:id="@+id/textNombre"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="5sp"
                android:textStyle="bold"
                android:text="@string/nombreText" />

            <EditText
                android:id="@+id/inputNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintNombre"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textApellidos"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="5sp"
                android:textStyle="bold"
                android:text="@string/apellidosText" />

            <EditText
                android:id="@+id/inputApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintApellidos"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textDNI"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textStyle="bold"
                android:text="@string/DNItext" />

            <EditText
                android:id="@+id/inputDNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintDNI"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textTelefono"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textStyle="bold"
                android:text="@string/telefonotexto" />

            <EditText
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintTLF"
                android:inputType="phone"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textStyle="bold"
                android:text="@string/emailText" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textFecha"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textStyle="bold"
                android:text="@string/fechaText" />

            <EditText
                android:id="@+id/inputFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:minHeight="48dp"
                android:hint="@string/hintFecha"
                android:importantForAutofill="no"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textHoraIni"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textStyle="bold"
                android:text="@string/hiText" />

            <EditText
                android:id="@+id/inputHoraIni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintHI"
                android:importantForAutofill="no"
                android:inputType="time"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textHoraFin"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textStyle="bold"
                android:text="@string/textHF" />

            <EditText
                android:id="@+id/inputHoraFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintHF"
                android:importantForAutofill="no"
                android:inputType="time"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textAsistentes"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="3dp"
                android:textStyle="bold"
                android:text="@string/asistentesText" />

            <EditText
                android:id="@+id/inputAsistentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintAsistentes"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textComentario"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:textStyle="bold"
                android:text="@string/textComentario" />

            <EditText
                android:id="@+id/inputComentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintComentarios"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/botonFormulario"
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/actualizar_reserva"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>