<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="?attr/colorOnPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:ignore="UselessParent">
            <TextView
                android:id="@+id/pistaReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pista_reserva"
                android:gravity="center"/>
            <TextView
                android:id="@+id/nombreReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_reserva"
                android:gravity="center"
                android:layout_below="@+id/pistaReserva"/>
            <TextView
                android:id="@+id/apellReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apellido_reserva"
                android:gravity="center"
                android:layout_below="@+id/nombreReserva"/>
            <TextView
                android:id="@+id/fecha_inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_inicio"
                android:gravity="center"
                android:layout_below="@+id/apellReserva"/>
            <TextView
                android:id="@+id/fecha_fin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_fin"
                android:gravity="center"
                android:layout_below="@+id/fecha_inicio"/>
            <TextView
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_actual"
                android:gravity="center"
                android:layout_below="@+id/fecha_fin"/>
            <TextView
                android:id="@+id/asistentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_de_asistentes"
                android:gravity="center"
                android:layout_below="@+id/fecha"/>
            <Button
                android:id="@+id/botonDetallesReserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_mas_detalles"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_below="@id/asistentes">
            </Button>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>