<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-6dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgLocalizacion"
                android:layout_width="wrap_content"
                android:layout_height="234sp"
                android:contentDescription="@string/descripcionFotoInstalaciones"
                android:src="@drawable/padel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/descripcionLocalizacion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLocalizacion" />

            <View
                android:id="@+id/divisorInicial"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/naranja"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/texto1Localizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/transporteMedios"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divisorInicial" />

            <TextView
                android:id="@+id/textoBus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="36dp"
                android:text="@string/Autobuses"
                app:layout_constraintEnd_toStartOf="@+id/buttonAutobuses"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/texto1Localizacion" />

            <Button
                android:id="@+id/buttonAutobuses"
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/textoBotonAutobuses"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/buttonTrenes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/texto1Localizacion"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/tren"
                app:layout_constraintEnd_toEndOf="@+id/textoBus"
                app:layout_constraintStart_toStartOf="@+id/textoBus"
                app:layout_constraintTop_toBottomOf="@+id/textoBus" />

            <Button
                android:id="@+id/buttonTrenes"
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="91dp"
                android:text="@string/textoBotonTrenes"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/buttonAutobuses"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/buttonAutobuses"
                app:layout_constraintTop_toBottomOf="@+id/texto1Localizacion" />

            <View
                android:id="@+id/divisor"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/naranja"
                app:layout_constraintTop_toBottomOf="@+id/buttonTrenes"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textoMapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:text="@string/mapText"
                android:textStyle="bold"

                app:layout_constraintTop_toBottomOf="@+id/divisor"
                tools:layout_editor_absoluteX="-32dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/mapa"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textoMapa" />

            <Button
                android:id="@+id/botonMapa"
                android:layout_width="230sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/botonMapaText"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/buttonTrenes"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/buttonTrenes"
                app:layout_constraintTop_toBottomOf="@+id/textoMapa" />

            <View
                android:id="@+id/divisorFinal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/naranja"
                app:layout_constraintTop_toBottomOf="@+id/botonMapa"
                tools:layout_editor_absoluteX="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>